fix: hide ids and show disabled fields also in dark mode in editor column

--- a/bloembraaden/client/admin.css
+++ b/bloembraaden/client/admin.css
@@ -79,6 +79,7 @@
     letter-spacing: 0;
 }
 
+.dark-mode .edit-area *,
 .edit-area * {
     color: rgb(44, 44, 52);
 }
